--- a/src/pages/app.html
+++ b/src/pages/app.html
@@ -73,7 +73,7 @@
     </main>
 
     <footer class="text-center text-xs mt-8 text-gray-400">
-      <a href="https://github.com/hzoo/henry.ink/tree/main/statusphere" class="underline">henry.ink/statusphere</a>
+      <a href="https://github.com/hzoo/henry-statusphere" class="underline">code at hzoo/henry-statusphere</a>
     </footer>
   </div>
 
