--- a/src/pages/app.html
+++ b/src/pages/app.html
@@ -14,11 +14,10 @@
     </header>
 
     <main>
-      <div id="auth-section" class="mb-8">
+      <div id="auth-section" class="mb-8 hidden">
         <div id="logged-out-view">
-          <p class="mb-4">Sign in with your Bluesky account to share your status!</p>
           <button id="login-btn" class="w-full p-2 border border-black hover:bg-black hover:text-white">
-            Sign In
+            Sign in with Bluesky
           </button>
         </div>
 
