--- a/src/pages/app.html
+++ b/src/pages/app.html
@@ -25,9 +25,14 @@
           <form id="status-form" class="space-y-4">
             <div class="flex items-center justify-between">
               <div id="user-info" class="text-sm"></div>
-              <button id="logout-btn" type="button" class="text-xs px-2 py-1 border border-gray-400 hover:border-black">
-                Log out
-              </button>
+              <div class="space-x-2">
+                <a id="profile-link" href="#" class="text-xs px-2 py-1 border border-gray-400 hover:border-black">
+                  Profile
+                </a>
+                <button id="logout-btn" type="button" class="text-xs px-2 py-1 border border-gray-400 hover:border-black">
+                  Log out
+                </button>
+              </div>
             </div>
             
             <div class="grid grid-cols-8 gap-1 mb-4">
