--- a/src/pages/app.html
+++ b/src/pages/app.html
@@ -71,7 +71,7 @@
         <div id="loading" class="text-center">Loading recent statuses...</div>
         <div id="status-timeline" class="hidden space-y-1"></div>
         <div id="no-statuses" class="hidden text-center">
-          <p>No status updates yet. Be the first to share!</p>
+          <p>No status updates indexed yet. Be the first to share!</p>
         </div>
       </div>
     </main>
