--- a/src/pages/app.html
+++ b/src/pages/app.html
@@ -77,7 +77,7 @@
     </main>
 
     <footer class="text-center text-xs mt-8 text-gray-400">
-      <a href="https://github.com/hzoo/henry-statusphere" class="underline">code at hzoo/henry-statusphere</a>
+      <a href="https://github.com/hzoo/henrys-statusphere" class="underline">code at hzoo/henrys-statusphere</a>
     </footer>
   </div>
 
