--- a/src/pages/app.html
+++ b/src/pages/app.html
@@ -35,23 +35,8 @@
               </div>
             </div>
             
-            <div class="grid grid-cols-8 gap-1 mb-4">
-              <button type="button" class="status-btn text-xl p-2 border border-gray-300 hover:border-black" data-status="👍">👍</button>
-              <button type="button" class="status-btn text-xl p-2 border border-gray-300 hover:border-black" data-status="🤯">🤯</button>
-              <button type="button" class="status-btn text-xl p-2 border border-gray-300 hover:border-black" data-status="💙">💙</button>
-              <button type="button" class="status-btn text-xl p-2 border border-gray-300 hover:border-black" data-status="😳">😳</button>
-              <button type="button" class="status-btn text-xl p-2 border border-gray-300 hover:border-black" data-status="😱">😱</button>
-              <button type="button" class="status-btn text-xl p-2 border border-gray-300 hover:border-black" data-status="🙃">🙃</button>
-              <button type="button" class="status-btn text-xl p-2 border border-gray-300 hover:border-black" data-status="😎">😎</button>
-              <button type="button" class="status-btn text-xl p-2 border border-gray-300 hover:border-black" data-status="😇">😇</button>
-              <button type="button" class="status-btn text-xl p-2 border border-gray-300 hover:border-black" data-status="🤓">🤓</button>
-              <button type="button" class="status-btn text-xl p-2 border border-gray-300 hover:border-black" data-status="😆">😆</button>
-              <button type="button" class="status-btn text-xl p-2 border border-gray-300 hover:border-black" data-status="🥳">🥳</button>
-              <button type="button" class="status-btn text-xl p-2 border border-gray-300 hover:border-black" data-status="🤩">🤩</button>
-              <button type="button" class="status-btn text-xl p-2 border border-gray-300 hover:border-black" data-status="🤘">🤘</button>
-              <button type="button" class="status-btn text-xl p-2 border border-gray-300 hover:border-black" data-status="👀">👀</button>
-              <button type="button" class="status-btn text-xl p-2 border border-gray-300 hover:border-black" data-status="🦋">🦋</button>
-              <button type="button" class="status-btn text-xl p-2 border border-gray-300 hover:border-black" data-status="🚀">🚀</button>
+            <div id="popular-emojis" class="grid grid-cols-6 gap-1 mb-4">
+              <!-- Popular emojis will be loaded dynamically -->
             </div>
             
             <div class="flex gap-2">
