--- a/src/pages/app.html
+++ b/src/pages/app.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline'; style-src 'self'; img-src 'self' https://cdn.bsky.app; connect-src 'self' https: wss:">
   <title>Statusphere</title>
   <link rel="stylesheet" href="tailwindcss">
 </head>
