--- a/src/pages/app.html
+++ b/src/pages/app.html
@@ -6,6 +6,24 @@
   <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline'; style-src 'self'; img-src 'self' https://cdn.bsky.app; connect-src 'self' https: wss:">
   <title>Statusphere</title>
   <link rel="stylesheet" href="tailwindcss">
+  <style>
+    .auth-section {
+      transition: opacity 0.3s ease-in-out;
+    }
+    .auth-loading {
+      opacity: 0.6;
+    }
+    .auth-ready {
+      opacity: 1;
+    }
+    .fade-in {
+      animation: fadeIn 0.3s ease-in-out;
+    }
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(10px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+  </style>
 </head>
 <body class="font-mono bg-white text-black min-h-screen">
   <div class="max-w-xl mx-auto p-8">
@@ -15,8 +33,14 @@
     </header>
 
     <main>
-      <div id="auth-section" class="mb-8 hidden">
-        <div id="logged-out-view">
+      <div id="auth-section" class="auth-section auth-loading mb-8">
+        <div id="auth-loading-view" class="text-center text-gray-500">
+          <div class="p-4 border border-gray-200 bg-gray-50">
+            Loading...
+          </div>
+        </div>
+        
+        <div id="logged-out-view" class="hidden">
           <button id="login-btn" class="w-full p-2 border border-black hover:bg-black hover:text-white">
             Sign in with Bluesky
           </button>
