--- a/src/pages/app.html
+++ b/src/pages/app.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline'; style-src 'self'; img-src 'self' https://cdn.bsky.app; connect-src 'self' https: wss:">
-  <title>Statusphere</title>
+  <title>Henry's Statusphere</title>
   <link rel="stylesheet" href="tailwindcss">
   <style>
     .auth-section {
@@ -28,8 +28,8 @@
 <body class="font-mono bg-white text-black min-h-screen">
   <div class="max-w-xl mx-auto p-8">
     <header class="text-center mb-8">
-      <h1 class="text-2xl font-bold mb-2">Statusphere</h1>
-      <p class="text-xs">Set your status on the Atmosphere.</p>
+      <h1 class="text-2xl font-bold mb-2">Henry's Statusphere</h1>
+      <p class="text-xs">Set your {status} on the Atmosphere.</p>
     </header>
 
     <main>
