--- a/src/pages/app.html
+++ b/src/pages/app.html
@@ -7,15 +7,7 @@
   <title>Henry's Statusphere</title>
   <link rel="stylesheet" href="tailwindcss">
   <style>
-    .auth-section {
-      transition: opacity 0.3s ease-in-out;
-    }
-    .auth-loading {
-      opacity: 0.6;
-    }
-    .auth-ready {
-      opacity: 1;
-    }
+
     .fade-in {
       animation: fadeIn 0.3s ease-in-out;
     }
@@ -29,17 +21,14 @@
   <div class="max-w-xl mx-auto p-8">
     <header class="text-center mb-8">
       <h1 class="text-2xl font-bold mb-2">Henry's Statusphere</h1>
-      <p class="text-xs">Set your {status} on the Atmosphere.</p>
+      <p class="text-xs mb-1">Set your {status} on the Atmosphere.</p>
+      <p class="text-xs text-gray-400">
+        <a href="https://github.com/hzoo/henrys-statusphere" class="underline">code at hzoo/henrys-statusphere</a>
+      </p>
     </header>
 
     <main>
-      <div id="auth-section" class="auth-section auth-loading mb-8">
-        <div id="auth-loading-view" class="text-center text-gray-500">
-          <div class="p-4 border border-gray-200 bg-gray-50">
-            Loading...
-          </div>
-        </div>
-        
+      <div id="auth-section" class="auth-section mb-8">
         <div id="logged-out-view" class="hidden">
           <button id="login-btn" class="w-full p-2 border border-black hover:bg-black hover:text-white">
             Sign in with Bluesky
@@ -78,17 +67,12 @@
       </div>
 
       <div id="timeline-section">
-        <div id="loading" class="text-center">Loading recent statuses...</div>
         <div id="status-timeline" class="hidden space-y-1"></div>
         <div id="no-statuses" class="hidden text-center">
           <p>No status updates indexed yet. Be the first to share!</p>
         </div>
       </div>
     </main>
-
-    <footer class="text-center text-xs mt-8 text-gray-400">
-      <a href="https://github.com/hzoo/henrys-statusphere" class="underline">code at hzoo/henrys-statusphere</a>
-    </footer>
   </div>
 
   <script type="module" src="./app.ts"></script>
