initial oauth scopes

--- a/src/pages/app.html
+++ b/src/pages/app.html
@@ -29,6 +29,10 @@
 
     <main>
       <div id="auth-section" class="auth-section mb-8">
+        <div id="auth-message" class="hidden mb-4 p-3 border border-gray-400 text-sm text-center bg-gray-50">
+          <!-- Auth messages appear here -->
+        </div>
+        
         <div id="logged-out-view" class="hidden">
           <button id="login-btn" class="w-full p-2 border border-black hover:bg-black hover:text-white">
             Sign in with Bluesky
