link profiles internally

--- a/src/pages/app.html
+++ b/src/pages/app.html
@@ -37,6 +37,9 @@
           <button id="login-btn" class="w-full p-2 border border-black hover:bg-black hover:text-white">
             Sign in with Bluesky
           </button>
+          <p class="text-xs text-gray-400 text-center mt-2">
+            Scoped to <code class="bg-gray-100 px-1">xyz.statusphere.status</code> only
+          </p>
         </div>
 
         <div id="logged-in-view" class="hidden">
